crates/astria-celestia-client/kubernetes/deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: astria-celestia-client-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: astria-celestia-client-test
  labels:
    app.kubernetes.io/name: astria-celestia-client-test
  namespace: astria-celestia-client-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: astria-celestia-client-test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: astria-celestia-client-test
    spec:
      securityContext:
        runAsUser: 10001
        fsGroup: 10001
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: celestia-app
          command: ["/scripts/start-celestia-appd.sh"]
          image: "ghcr.io/celestiaorg/celestia-app:v1.0.0-rc1"
          volumeMounts:
          - mountPath: /scripts/
            name: celestia-appd-scripts-volume
            readOnly: true
          - mountPath: /home/celestia
            name: celestia-home
        - name: celestia-bridge
          command:
          - /scripts/start-bridge.sh
          # image: "ghcr.io/astriaorg/celestia-node:test-sha-07fa3e7"
          image: "celestia-node:v0.11.0-rc1-test"
          volumeMounts:
            - mountPath: /scripts/
              name: bridge-scripts-volume
              readOnly: true
            - mountPath: /home/celestia
              name: celestia-home
            - name: bridge-static
              mountPath: /home/celestia/bridge/NJ3XILLTMVRXEZLUFZVHO5A
              subPath: NJ3XILLTMVRXEZLUFZVHO5A
          ports:
            - containerPort: 26659
              name: bridge-rest
            - containerPort: 26658
              name: bridge-jsonrpc
          startupProbe:
            httpGet:
              path: /header/1
              port: bridge-rest
            failureThreshold: 30
            periodSeconds: 10
      volumes:
      - name: bridge-scripts-volume
        configMap:
          name: bridge-scripts
          defaultMode: 0500
      - name: bridge-static
        configMap:
          name: bridge-static
          defaultMode: 0500
      - name: celestia-appd-scripts-volume
        configMap:
          name: celestia-appd-scripts
          defaultMode: 0500
      - emptyDir: {}
        name: celestia-home
